# UCV_ATE_SI_LAB03

./: README.md
UCV_ATE_SI_LAB03/: README.md
UCV_ATE_SI_LAB03/laboratorio3_kedro/: pyproject.toml  requirements.txt
UCV_ATE_SI_LAB03/laboratorio3_kedro/laboratorio3_kedro/: pyproject.toml
UCV_ATE_SI_LAB03/laboratorio3_kedro/laboratorio3_kedro/conf/base/: catalog.yml
UCV_ATE_SI_LAB03/laboratorio3_kedro/laboratorio3_kedro/data/08_reporting/: resultado_analisis.json
UCV_ATE_SI_LAB03/laboratorio3_kedro/laboratorio3_kedro/src/laboratorio3_kedro/: __init__.py  pipeline_registry.py  settings.py
UCV_ATE_SI_LAB03/laboratorio3_kedro/laboratorio3_kedro/src/laboratorio3_kedro/pipelines/histogram/: __init__.py  analyzer.py  nodes.py  pipeline.py
UCV_ATE_SI_LAB03/laboratorio3_kedro/laboratorio3_kedro/tests/: test_analyzer.py
