[project]
name = "laboratorio3-kedro"
version = "0.1.0"
description = ""
authors = [
    {name = "Diego Torrejon"}
]
requires-python = ">=3.11"
dependencies = [
    "kedro (>=1.3.1,<2.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
