[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11"
name = "laboratorio3_kedro"
version = "0.1.0"
readme = "README.md"

dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.3.1",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "kedro-datasets (>=9.3.0,<10.0.0)",
]

[project.scripts]
laboratorio3-kedro = "laboratorio3_kedro.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "laboratorio3_kedro.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "laboratorio3_kedro"
project_name = "laboratorio3_kedro"
kedro_init_version = "1.3.1"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[tool.kedro_telemetry]
project_id = "5105a6bc70e14e6ca2ee22b7e603ed3c"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
